fix svg css style and wrap up the testgit add .!

--- a/src/components/Widget.scss
+++ b/src/components/Widget.scss
@@ -94,4 +94,9 @@
   border: 3px solid rgba(255, 255, 255, 0.2);
   border-radius: 3px;
   background: none;
+
+  svg {
+    display: block;
+    width: 100%;
+  }
 }
