--- a/src/index.scss
+++ b/src/index.scss
@@ -22,8 +22,7 @@ a {
   color: inherit;
 }
 
-img,
-svg {
+img {
   width: 100%;
   display: block;
 }
